--- a/src/sass/components/_gallery.scss
+++ b/src/sass/components/_gallery.scss
@@ -19,3 +19,7 @@
     height: auto;
   }
 }
+.image__skeleton {
+  background: linear-gradient(to right, #12c2e9, #c471ed, #f64f59);
+  height: 500px;
+}
