--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -24,5 +24,9 @@
   &__search-box {
     flex: 1;
     margin: 0 2.5rem;
+
+    @media screen and (max-width: 62.5em) {
+      margin: 0 0 0 2.5rem;
+    }
   }
 }
