--- a/src/sass/layout/_nav.scss
+++ b/src/sass/layout/_nav.scss
@@ -2,6 +2,11 @@
   display: flex;
   align-items: center;
 
+  @media screen and (max-width: 62.5em) {
+    display: none;
+    backface-visibility: hidden;
+  }
+
   &__menu {
     display: flex;
     list-style-type: none;
