--- a/src/sass/base/_animations.scss
+++ b/src/sass/base/_animations.scss
@@ -6,3 +6,15 @@
     transform: rotate(360deg);
   }
 }
+
+@keyframes menuload {
+  0% {
+    transform: scale(0.95);
+  }
+  80% {
+    transform: scale(1.05);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
