--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -25,8 +25,8 @@
     flex: 1;
     margin: 0 2.5rem;
 
-    @media screen and (max-width: 62.5em) {
-      margin: 0 0 0 2.5rem;
-    }
+    // @media screen and (max-width: 62.5em) {
+    //   margin: 0 0 0 2.5rem;
+    // }
   }
 }
