--- a/src/sass/layout/_nav.scss
+++ b/src/sass/layout/_nav.scss
@@ -1,30 +1,63 @@
 .nav {
   display: flex;
   align-items: center;
+  // transition: padding 0.2s;
 
   @media screen and (max-width: 62.5em) {
-    display: none;
+    position: absolute;
+    top: 6rem;
+    right: 2.5rem;
+    flex-direction: column;
+    background-color: #000;
+    height: 0;
+    width: 0;
+    overflow: hidden;
     backface-visibility: hidden;
+  }
+
+  &.nav__show {
+    height: auto;
+    width: auto;
+    padding: 3rem;
+    animation: menuload 0.2s;
   }
 
   &__menu {
     display: flex;
     list-style-type: none;
     margin-right: 3rem;
+    @media screen and (max-width: 62.5em) {
+      flex-direction: column;
+      margin-right: 0rem;
+      align-self: stretch;
+    }
   }
 
   &__item {
     &:not(:last-child) {
       margin-right: 2rem;
     }
+    @media screen and (max-width: 62.5em) {
+      margin-right: 0rem !important;
+      padding: 1rem 0;
+    }
   }
 
-  &__link {
+  &__link:link,
+  &__link:visited {
     color: var(--color-grey-dark-2);
     font-size: 1.5rem;
+    @media screen and (max-width: 62.5em) {
+      color: var(--color-white);
+      width: 100%;
+      display: inline-block;
+    }
 
     &:hover {
       color: var(--color-grey-dark-1);
+      @media screen and (max-width: 62.5em) {
+        color: var(--color-white);
+      }
     }
   }
 
@@ -33,6 +66,11 @@
     position: relative;
     padding-left: 2rem;
     border-left: 1px solid var(--color-grey-dark-3);
+
+    @media screen and (max-width: 62.5em) {
+      border-left: none;
+      padding: 2rem 0;
+    }
   }
 
   &__btn {
@@ -62,5 +100,16 @@
     &:not(:last-child) {
       margin-right: 1rem;
     }
+  }
+}
+.ham-menu {
+  display: none;
+  @media screen and (max-width: 62.5em) {
+    display: block;
+    margin-top: 0.5rem;
+  }
+  &__icon {
+    height: 3.2rem;
+    width: 3.2rem;
   }
 }
